[project]
name = "fastapi-taskflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gio Abeleda", email = "gioabeleda@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
fastapi-taskflow = "fastapi_taskflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "packages/api",
    "packages/worker",
]
